[package]
name = "bevy_mod_actuate"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A reactive user-interface framework"
repository = "https://github.com/actuate-rs/bevy_mod_actuate"

[dependencies]
actuate = { version = "0.6.0", features = ["rt"] }
bevy = "0.15.0-rc.3"
tokio = { version = "1.41.1", features = ["sync"] }

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
